fix: metodo writeString alterado para write (compatibilidade com java 8)